@startuml
abstract class Emergencia{
    #int id
    #String causa
    #String fecha
    #String tipo
    #String[] zonas
    #int severidad
    #reportes
    #EnttidadDeRiesgo entidadQueAtiende

    +void addReporte(Reporte reporte)
    +ArrayList<Reporte> listarReporte()
    +int contarReporte()
    +abstract evaluarEmergencia()
    +abstract porcenEmergencias()
    +void actualizarDatosEntidad()
    
}

class EmergenciaFactory<<(Singleton)>>{
    -EmergenciaFactory fabrica
    
    +static EmergenciaFactory getFabrica()
    + Emergencia getEmergencia)
}

class Inundacion{
    -int nivelDelAgua
}

class Terremoto{
    -float magnitud
    -bool esReplica
}

class Deslizamiento{
    -bool bloqueaCarretera
    -int extension
}

class Incendio{
    -float hectareasAfectadas
}

class Vendaval{
    -float velocidadViento
    -bool afectacionServicios
    -bool dañosInfraEstructura
}

class Usuario <<Prototipo>>{
    -int cedula
    -String nombre
    -String zona
    -String ubicacion
    -reportes

    +void recibirPrevencion(Reporte reporte)
}

class EntidadDeRiesgo{
    -int id
    -String nombre
    -bool disponible
    -Emergencia emergenciaQueAtiende
    -int cantEmergAtendidas

    +bool actualizarDatosEmergencia(int idEmergencia, String tipo, String causa, String fecha, String[] zonas, int severidad)
    +void actualizarEstado()
    +void prevencionEmergencia(String tipo,String causa,String zona, list<Usuario> usuarios)
}

class Reporte{
    -String tipoEmergencia
    -String[] zona
    -String ubicacion
    -String descripcion
    -bool heridosVisibles
    -Usuario usuarioReporta
}

class GestionEmergencia <<Singleton>>{
    -usuarios
    -emergencias
    -entidades
    
    +void crearEmergencia(Emergencia xEmergencia)
    +void crearUsuario(Usuario xUsuario)
    +void crearEntidad(Entidad xEntidad)
    +String listarXEmergencia(String tipo)
    +String listarXUsuario(String nomUsuario)
    +String listarXZona(String xZona)
    +String listarXEntidad(String xEntidad)
    +void gestionEmergencia(Reporte reporte)
    +float porcenEmergAtendXEntidad(String xEntidad)
    +float porcenXTipoEmergencia(String xTipo)
}


Inundacion --|> Emergencia 
Terremoto -up-|> Emergencia  
Deslizamiento --|> Emergencia  
Incendio --|> Emergencia  
Vendaval -up-|> Emergencia  
Reporte "* " -up-* "1  " Emergencia
Reporte "* " -up- "*  " Usuario
Emergencia .right.. EmergenciaFactory : uses
EntidadDeRiesgo "1.." -up- "1" Emergencia
GestionEmergencia "1 " *-down- "* " Usuario 
GestionEmergencia "1 " *-right- "  * " Emergencia 
GestionEmergencia "1 " *-up- "1.." EntidadDeRiesgo 

@enduml
